Avoid occurence of invisible blocks.

When a line is removed, fill the top line with empty cells. Before, the
top line was not updated. This lead to the occurence of invisible blocks,
if pieces were stacked up to the top line before. This patch was suggested
by GJ in the discussion to bug #333694.

BUG: 333694
BUG: 344506
REVIEW: 125578